ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /kiali
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
